--- a/projetfin/templates/forms/new_artist.html
+++ b/projetfin/templates/forms/new_artist.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
+      {{form.csrf_token}}
       <h3 class="form-heading">List a new artist</h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -22,7 +23,20 @@
       <div class="form-group">
           <label for="phone">Phone</label>
           {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
-        </div>
+          {% if form.phone.errors %}
+              <ul class="text-danger">
+                  {% for error in form.phone.errors %}
+                      <li>{{ error }}</li>
+                  {% endfor %}
+              </ul>
+          {% endif %}
+
+          
+      </div>
+
+      
+
+
       <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
@@ -54,5 +68,8 @@
             </div>
       <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
+
+    
+
   </div>
 {% endblock %}
