--- a/projetfin/templates/forms/new_venue.html
+++ b/projetfin/templates/forms/new_venue.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form" action="/venues/create">
+      {{form.csrf_token}}
       <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -26,6 +27,13 @@
       <div class="form-group">
           <label for="phone">Phone</label>
           {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
+          {% if form.phone.errors %}
+              <ul class="text-danger">
+                  {% for error in form.phone.errors %}
+                      <li>{{ error }}</li>
+                  {% endfor %}
+              </ul>
+          {% endif %}
         </div>
       <div class="form-group">
         <label for="genres">Genres</label>
@@ -58,6 +66,8 @@
             {{ form.seeking_description(class_ = 'form-control', placeholder='Description', autofocus = true) }}
        </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+      
+
     </form>
   </div>
 {% endblock %}
